<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pokemon"
            type="com.aflah.pokedex.model.Pokemon" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_pokedex"
        tools:context=".ui.DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_260dp"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/dimen_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

            <ImageView
                android:id="@+id/pokemonDetailImageView"
                loadUrl="@{pokemon.getImageUrl()}"
                android:layout_width="@dimen/dimen_200dp"
                android:layout_height="@dimen/dimen_200dp"
                android:layout_marginVertical="@dimen/dimen_20dp"
                android:scaleType="center"
                android:translationZ="@dimen/dimen_100dp"
                app:layout_constraintBottom_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                style="@style/Heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:layout_marginBottom="@dimen/dimen_36dp"
                android:text="@{pokemon.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <TextView
                android:id="@+id/weight"
                style="@style/Heading4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@{pokemon.getWeightString()}"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/height"
                style="@style/Heading4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{pokemon.getHeightString()}"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weight"
                app:layout_constraintTop_toTopOf="@id/weight" />

            <TextView
                android:id="@+id/weight_title"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_weight"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight" />

            <TextView
                android:id="@+id/height_title"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_height"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weight"
                app:layout_constraintTop_toBottomOf="@id/height" />

            <Button
                android:id="@+id/statsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/action_stats"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_title" />

            <Button
                android:id="@+id/evolveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/action_evolution"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weight"
                app:layout_constraintTop_toBottomOf="@+id/height_title" />

            <FrameLayout
                android:id="@+id/detailPokemonFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statsButton" />

            <com.aflah.pokedex.custom_view.LoadingView
                android:id="@+id/loadingView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <include
                android:id="@+id/noInternetView"
                layout="@layout/layout_no_internet_connection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>